--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Understanding TypeScript</title>
-    <script src="app.js" defer ></script>
-</head>
-<body>
-    
-</body>
+    <script src="dist/work/app.js" defer></script>
+    <script src="dist/analytics/analytics.js" defer></script>
+  </head>
+  <body>
+    <button>click me </button>
+  </body>
 </html>
